# web-crawler

./: .env  .gitignore  LICENCE  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
crawled_data_ws/: Dockerfile  package-lock.json  package.json
crawled_data_ws/src/: index.ts
crawled_data_ws/src/Errors/: BadRequestError.ts  ConflictError.ts  InternalServerError.ts  NotFoundError.ts  StatusError.ts  ValidationError.ts
crawled_data_ws/src/controllers/: graphDataController.ts
crawled_data_ws/src/database/: interface.ts
crawled_data_ws/src/services/: DTOInterface.ts  DataUpdateCoordinator.ts  GraphDataSSEConnections.ts  MessageQueueManager.ts  graphDataService.ts
crawler/: .dockerignore  Dockerfile  codegen.yaml  less  package-lock.json  package.json  tsconfig.json
crawler/crawler_engine/: CMakeLists.txt  cmake_install.cmake
crawler/crawler_engine/src/: CRAWLING_PROTOCOL.md  main.cpp
crawler/src/: index.ts
crawler/src/Errors/: ConflictError.ts  InternalServerError.ts  NotFoundError.ts  StatusError.ts
crawler/src/controllers/: executionsController.ts  recordsController.ts  siteCrawlignController.ts  tagsController.ts
crawler/src/database/: interface.ts  recordsDatabase.ts  tagsDatabase.ts
crawler/src/middleware/: ErrorHandler.ts
crawler/src/services/: DTOInterface.ts  executionsServices.ts  recordsServices.ts  tagsServices.ts
crawler/src/utils/: enums.ts
crawler/src/v1/: swagger.ts
crawler/test/: executionQueue.test.ts  executionQueueManager.test.ts
crawler_tester/: .gitignore  package-lock.json  package.json  tsconfig.json
crawler_tester/src/: index.ts
crawler_tester/src/services/: HTMLGenerator.ts  interface.ts  (+1 more)
db/: 000_readme.sql  001_records.sql  002_tags.sql  003_executions.sql  003_nodes.sql  004_executions.sql  tags.sql
db/init/: 000_readme.sql  001_records.sql  002_tags.sql  003_nodes.sql  004_executions.sql
hasura/: Dockerfile  entrypoint.sh  hasuraTrackingSettings.json  trackDbData.sh
rabbitMQ/: Dockerfile
rabbitMQ/configuration/: definitions.json
scraper/: Dockerfile  docker-compose.dev.yml  package-lock.json  package.json
scraper/crawler/: CMakeLists.txt
scraper/crawler/src/: main.cpp
scraper/crawler/src/Comunication/: OutputProtocol.cpp  OutputProtocol.h
scraper/crawler/src/Crawler/: Crawler.cpp  Crawler.h
scraper/crawler/src/Crawler/CrawlerFilter/: CrawlerFilter.cpp  CrawlerFilter.h
scraper/crawler/src/Downloader/: DataDownloader.cpp
scraper/crawler/src/LinkSearch/: LinksFinder.cpp
scraper/crawler/src/LinkSearch/algorithms/: SearchAlgorithm.h  SimpleHrefSearchAlgorithm.cpp  SimpleHrefSearchAlgorithm.h  SimpleSearchAlgorithm.cpp  TinyXMLParserAlgorithm.cpp  TinyXMLParserAlgorithm.h
scraper/src/: IRecord.ts  a.out  crawler.ts  index.ts  routing.ts  scheduler_queue.ts
test_data/: index.html
utility/: package-lock.json  package.json
utility/database/: NodesTestDataGenerator.js  TestSpeedNodeQuery.js
vue/: .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json  quasar.config.js  tsconfig.json  tsconfig.node.json
vue/src/: App.vue
(+137 files in other folders)
